# taramonit

./: .env.example  README.rst  compose.dev.yml  compose.yml  docker-compose.yml  package-lock.json
backend/: .gitignore  pyproject.toml
certbot/: generate-cert.sh
frontend/: README.md  package-lock.json  package.json
nginx/: Dockerfile
nginx/conf.d/templates/: sites-default.conf.j2
